// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FundingSource opens the edit funding source dialog box when edit button is clicked, cancel and save buttons are pressed 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-25"
  />
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3"
        >
          Funding Sources
        </h3>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          aria-label="Add Funding Source"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
          tabindex="0"
          title="Add Funding Source"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.5rem; height: 1.5rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            Add Funding Source
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item"
    >
      <hr
        class="MuiDivider-root makeStyles-topBorder-15"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
      >
        <div
          class="MuiBox-root MuiBox-root-16"
        >
          <p
            class="MuiTypography-root makeStyles-heading-13 MuiTypography-body1"
          >
            agency name
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          aria-label="Edit Funding Source Information"
          class="MuiButtonBase-root MuiButton-root MuiButton-text editButtonSmall"
          tabindex="0"
          title="Edit Funding Source Information"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.3125rem; height: 1.3125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            EDIT
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="Delete Funding Source"
          class="MuiButtonBase-root MuiButton-root MuiButton-text trashButtonSmall"
          tabindex="0"
          title="Delete Funding Source"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.3125rem; height: 1.3125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
      >
        <div
          class="MuiBox-root MuiBox-root-17"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            Agency Project ID
          </span>
        </div>
        <div
          class="MuiBox-root MuiBox-root-18"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
            style="word-break: break-all;"
          >
            ABC123
          </h6>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
      >
        <div
          class="MuiBox-root MuiBox-root-19"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            Funding Amount
          </span>
        </div>
        <div
          class="MuiBox-root MuiBox-root-20"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            $ 333
          </h6>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
      >
        <div
          class="MuiBox-root MuiBox-root-21"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            Funding Dates
          </span>
        </div>
        <div
          class="MuiBox-root MuiBox-root-22"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
            style="word-break: break-all;"
          >
            04/14/2000 - 04/13/2021
          </h6>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
      >
        <div
          class="MuiBox-root MuiBox-root-23"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            Investment Category
          </span>
        </div>
        <div
          class="MuiBox-root MuiBox-root-24"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
            style="word-break: break-all;"
          >
            investment action
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FundingSource renders correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3"
        >
          Funding Sources
        </h3>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          aria-label="Add Funding Source"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
          tabindex="0"
          title="Add Funding Source"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.5rem; height: 1.5rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            Add Funding Source
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item"
    >
      <hr
        class="MuiDivider-root makeStyles-topBorder-3"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
      >
        <div
          class="MuiBox-root MuiBox-root-4"
        >
          <p
            class="MuiTypography-root makeStyles-heading-1 MuiTypography-body1"
          >
            agency name
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          aria-label="Edit Funding Source Information"
          class="MuiButtonBase-root MuiButton-root MuiButton-text editButtonSmall"
          tabindex="0"
          title="Edit Funding Source Information"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.3125rem; height: 1.3125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            EDIT
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="Delete Funding Source"
          class="MuiButtonBase-root MuiButton-root MuiButton-text trashButtonSmall"
          tabindex="0"
          title="Delete Funding Source"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.3125rem; height: 1.3125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
      >
        <div
          class="MuiBox-root MuiBox-root-5"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            Agency Project ID
          </span>
        </div>
        <div
          class="MuiBox-root MuiBox-root-6"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
            style="word-break: break-all;"
          >
            ABC123
          </h6>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
      >
        <div
          class="MuiBox-root MuiBox-root-7"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            Funding Amount
          </span>
        </div>
        <div
          class="MuiBox-root MuiBox-root-8"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            $ 333
          </h6>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
      >
        <div
          class="MuiBox-root MuiBox-root-9"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            Funding Dates
          </span>
        </div>
        <div
          class="MuiBox-root MuiBox-root-10"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
            style="word-break: break-all;"
          >
            04/14/2000 - 04/13/2021
          </h6>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
      >
        <div
          class="MuiBox-root MuiBox-root-11"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            Investment Category
          </span>
        </div>
        <div
          class="MuiBox-root MuiBox-root-12"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
            style="word-break: break-all;"
          >
            investment action
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
